fix kaleido dep, bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dynamic = ["version", "description"]
 
 dependencies = [
     "plotly",
-    "python-kaleido",
+    "kaleido",
     "pandas",
     "pymatgen",
     "matplotlib",
