remove uncertainty_toolbox, bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "matplotlib",
     "numpy",
     "scikit_learn",
-    "uncertainty_toolbox",
+    # "uncertainty_toolbox",
     "xgboost",
     "shap_hypetune",
 ]
