--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pymatgen==2022.1.9
 matplotlib==3.5.1
 numpy==1.22.0
 scikit_learn==1.0.2
-uncertainty_toolbox==0.1.0
+# uncertainty_toolbox==0.1.0
 xgboost==1.5.1
 shap_hypetune==0.2.4
